--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,149 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Red+Hat+Text:wght@700&display=swap");
+*,
+*::after,
+*::before {
+  padding: 0;
+  margin: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+body {
+  font-family: "Red Hat Text", sans-serif;
+  font-size: 87.5%;
+  color: white;
+  background: #191a24;
+  height: 100vh;
+  background-image: url("../images/bg-stars.svg");
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.countdown {
+  background-image: url("../images/pattern-hills.svg");
+  background-size: contain;
+  background-position: bottom;
+  height: 100vh;
+  width: 100vw;
+  background-repeat: no-repeat;
+  z-index: 999;
+  display: -ms-grid;
+  display: grid;
+  place-content: center;
+  place-items: center;
+  -ms-grid-columns: (minmax(70px, 120px))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(70px, 120px));
+  -ms-grid-rows: (minmax(2rem, 120px))[auto-fit];
+      grid-template-rows: repeat(auto-fit, minmax(2rem, 120px));
+  grid-gap: 1.5rem;
+}
+
+.countdown h1 {
+  font-size: 1.3rem;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 4;
+  grid-column: 1/5;
+  text-transform: uppercase;
+  letter-spacing: 4px;
+}
+
+.countdown .wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  min-width: 120px;
+  max-width: 120px;
+  max-height: 120px;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  grid-row: 2/3;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(50%, #2b2d40), color-stop(50%, #343650));
+  background: linear-gradient(to bottom, #2b2d40 50%, #343650 50%);
+  border-radius: 10px;
+  padding: 1.5rem;
+  position: relative;
+}
+
+.countdown .wrapper h4 {
+  position: absolute;
+  bottom: -40px;
+  opacity: 0.8;
+  color: #8486a9;
+  text-transform: uppercase;
+  letter-spacing: 4px;
+}
+
+.countdown .wrapper .day,
+.countdown .wrapper .hour,
+.countdown .wrapper .minute,
+.countdown .wrapper .second {
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(50%, #fb4673), color-stop(50%, #fb6087));
+  background-image: linear-gradient(to bottom, #fb4673 50%, #fb6087 50%);
+  -webkit-background-clip: text;
+  color: transparent;
+  font-size: 3.3rem;
+}
+
+.countdown .wrapper::after {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  border-radius: 50%;
+  content: "";
+  width: 0.5rem;
+  height: 0.5rem;
+  background: #191a24;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.countdown .wrapper::before {
+  position: absolute;
+  top: 50%;
+  right: 0;
+  border-radius: 50%;
+  content: "";
+  width: 0.5rem;
+  height: 0.5rem;
+  background: #191a24;
+  -webkit-transform: translate(50%, -50%);
+          transform: translate(50%, -50%);
+}
+
+@media (max-width: 650px) {
+  .countdown {
+    -ms-grid-columns: (minmax(70px, 70px))[auto-fit];
+        grid-template-columns: repeat(auto-fit, minmax(70px, 70px));
+    -ms-grid-rows: (minmax(2rem, 70px))[auto-fit];
+        grid-template-rows: repeat(auto-fit, minmax(2rem, 70px));
+    grid-gap: 0.8rem;
+  }
+  .countdown h1 {
+    font-size: 1rem;
+  }
+  .countdown .wrapper {
+    min-width: 70px;
+    max-width: 70px;
+    max-height: 70px;
+  }
+  .countdown .wrapper h4 {
+    font-size: 0.6rem;
+  }
+  .countdown .wrapper .day,
+  .countdown .wrapper .hour,
+  .countdown .wrapper .minute,
+  .countdown .wrapper .second {
+    font-size: 2.3rem;
+  }
+}
+/*# sourceMappingURL=style.css.map */
